# lpsf

./: .gitignore  AGENTS.md  LICENSE  LPSF_PROJECT_SUMMARY.md  MANIFEST.md  PLANS.md  README.md  pyproject.toml
ci/: github-actions-test.yml
codex/: CODEX_CONFIG_EXAMPLE.md  CODEX_GOAL_SETUP.md  CODEX_SESSION_RUNBOOK.md  GOAL_LPSF_V0_1.md  GPT_PRO_CONSULT_PACKET.md  SUBAGENT_ORCHESTRATION.md
docs/: 01_LPSF_THESIS.md  02_ARCHITECTURE.md  03_PLASTICITY_OPERATORS.md  04_MEMORY_FORGETTING.md  05_DB_SCHEMA.md  06_IMPLEMENTATION_ROADMAP.md  07_RISK_REGISTER.md  08_SOURCE_REFERENCES.md  09_LPSF_SPEC_V0_1.md  CODEX_PACK_KO.md
experiments/: EVALS_AND_BENCHMARKS.md  EXPERIMENT_PLAN.md
ops/: SAFE_WORKFLOW.md  STATUS_LOG_TEMPLATE.md
prompts/: CODEX_GOAL_PROMPT.md  CODEX_PLAN_PROMPT.md  GPT_PRO_REVIEW_PROMPT.md
research/: PAPER_READING_PROTOCOL.md  RESEARCH_QUEUE.md  SOURCE_QUALITY_RULES.md
scripts/: brain_backroom_eval.py  build_corpus.py  depth_sweep.py  forgetting_experiment.py  gen_eval_corpus.py  h6_with_rerank.py  ir_benchmark.py  lora_data_gen.py  lora_memory_experiment.py  lpsf_search.py  multiconcept_steering.py  multifact_experiment.py  personalization_demo.py  plot_frontier.py  rank_flip_frontier.py  real_corpus_eval.py  regenerate_report.py  rerank_temp_sweep.py  run_benchmark.py  run_forgetting_experiment.sh  run_lora_experiment.sh  steering_diffusion.py  steering_experiment.py  steering_geometry.py  substrate_capacity.py  substrate_recall.py  temperature_sensitivity.py
second_brain/: 2ND_BRAIN_NOTE_TEMPLATES.md  2ND_BRAIN_PROTOCOL.md  2ND_BRAIN_SCAN_PLAN.md
(+141 files in other folders)
